--- a/lib/stats_client/README.rdoc
+++ b/lib/stats_client/README.rdoc
@@ -14,6 +14,5 @@ Description goes here.
 
 == Copyright
 
-Copyright (c) 2014 Naveed Ahmad. See LICENSE.txt for
-further details.
+Copyright (c) 2014 Michael Lungo (mike@michaellungo.com) & Fantasy Capital. See LICENSE.txt for further details.
 
