Make rake task projection:fetch_stats multi-sport aware. Don't call MLB stuff yet.
This sets us up for the next step of actually populating MLB data

--- a/lib/stats_client/README.rdoc
+++ b/lib/stats_client/README.rdoc
@@ -1,18 +1,7 @@
 = stats_client
 
-Description goes here.
+This stats client was built early in the project by Michael Lungo. It was built for the
+Stats.com API, which we stopped using early in the project.
 
-== Contributing to stats_client
- 
-* Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet.
-* Check out the issue tracker to make sure someone already hasn't requested it and/or contributed it.
-* Fork the project.
-* Start a feature/bugfix branch.
-* Commit and push until you are happy with your contribution.
-* Make sure to add tests for it. This is important so I don't break it in a future version unintentionally.
-* Please try not to mess with the Rakefile, version, or history. If you want to have your own version, or is otherwise necessary, that is fine, but please isolate to its own commit so I can cherry-pick around it.
-
-== Copyright
-
-Copyright (c) 2014 Michael Lungo (mike@michaellungo.com) & Fantasy Capital. See LICENSE.txt for further details.
-
+It is at this point deprecated. Kenneth created a simpler client in sportsdata-client, for the
+new sports data service.
